<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/bg_item_character"
    android:elevation="12dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_img_container"
        android:layout_width="170dp"
        android:layout_height="150dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_img_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            android:background="@drawable/bg_img_character" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_tv_character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/item_txt6"
        app:layout_constraintStart_toEndOf="@id/item_img_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_status_color"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/bg_item_status"
        app:layout_constraintTop_toBottomOf="@id/item_tv_character_name"
        app:layout_constraintStart_toStartOf="@id/item_tv_character_name"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_txt5"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/item_tv_character_name"
        app:layout_constraintStart_toEndOf="@id/item_status_color"
        android:layout_marginStart="4dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_txt4"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/item_tv_status"
        app:layout_constraintTop_toTopOf="@id/item_tv_status"
        app:layout_constraintBottom_toBottomOf="@id/item_tv_status"
        android:layout_marginStart="4dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_gender_status_color"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/bg_item_status"
        app:layout_constraintTop_toTopOf="@id/item_tv_gender"
        app:layout_constraintBottom_toBottomOf="@id/item_tv_gender"
        app:layout_constraintStart_toStartOf="@id/item_tv_character_name"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_txt3"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/item_tv_status"
        app:layout_constraintStart_toEndOf="@id/item_gender_status_color"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/last_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_txt2"
        android:textColor="#9E9999"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/item_tv_gender"
        app:layout_constraintStart_toStartOf="@id/item_tv_character_name"
        app:layout_constraintBottom_toTopOf="@id/item_tv_last_location"
        android:layout_marginTop="12dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_tv_last_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_txt_1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/item_tv_character_name"
        app:layout_constraintTop_toBottomOf="@id/last_location" />
</androidx.constraintlayout.widget.ConstraintLayout>
